--- a/cv.qmd
+++ b/cv.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Lebenslauf"
+title: "Currículo"
 cv:
-  pdf: "Johannes_Feldhege_CV_231224.pdf"
+  pdf: "curriculo.pdf"
 engine: knitr
 ---
 
-{{< pdf Johannes_Feldhege_CV_231224.pdf width=100% height=500 >}}
+{{< pdf curriculo.pdf width=100% height=500 >}}
