--- a/index.qmd
+++ b/index.qmd
@@ -1,14 +1,9 @@
 ---
-title: "SBData - Denis Berté Sálvia, Dr."
+title: "Denis Berté Sálvia, Dr."
 about: 
   template: trestles
   image: "assets/foto.jpg"
   links:
-    - text: "{{< fa regular file-pdf >}} Lattes"
-      url: "cv.qmd"
-    - icon: linkedin
-      text: Linkedin
-      url: "#"
     - icon: github
       text: Github
       url: "https://github.com/DenisBerte/"
@@ -22,9 +17,9 @@ body {
 </style>
 
 
-## {{< fa user >}} Sobre a SBData
+## {{< fa user >}} Sobre
 
-Bem vindos ao website da SBData, uma empresa especializada em pesquisa e análise de dados. Eu sou fundador e me chamo Denis, sou Cientista Social, mestre em Sociologia Política, Doutor em Sociologia e Ciência Política com concentração em Sociologia. Atualmente curso MBA em Ciência e Análise de Dados. Tenho experiência em pesquisas quantitativas, especialmente em Opinião Pública e Políticas Públicas, envolvendo trabalho com indicadores sociais diversos e análise estatística multivariada. Também tenho experiência em pesquisas representativas e amostragem, além de levantamento de dados em campo. Trabalho com análise estatística em linguagem R, Python, SPSS e Excel. Mais recentemente tenho me voltado a serviçoes de consultoria para mandatos políticos com análises ligadas ao caompo eleitoral.
+Bem vindos! Eu sou o Denis, dono da SBData. Sou Cientista Social, mestre em Sociologia Política, Doutor em Sociologia e Ciência Política com concentração em Sociologia. Atualmente curso MBA em Ciência e Análise de Dados. Tenho experiência em pesquisas quantitativas, especialmente em Opinião Pública e Políticas Públicas, envolvendo trabalho com indicadores sociais diversos e análise estatística multivariada. Também tenho experiência em pesquisas representativas e amostragem, além de levantamento de dados em campo. Trabalho com análise estatística em linguagem R, Python, SPSS e Excel. Presto serviçoes de consultoria em pesquisa e análise, incluindo pesquisa para mandatos políticos, com levantamento de dados primários ou secundários e análises ligadas a eleições. Navegue pelas abas acima para ver algumas publicações recentes, meu currículo Lattes, e detalhes sobre o serviço de Consultoria em pesquisa e análise.
 
 ---
 
@@ -53,15 +48,15 @@ Minha trajetória acadêmica abrange das Ciências Sociais, em especial a sociol
 ### {{< fa code >}} Projetos
 
 - **Vitimização em ambientes universitários - Florianópolis e Chapecó**:  
-  Estudo sobre violência em universidades. Fui responsável pela aplicação do survey online. 
+  Estudo sobre violência em universidades. Fui responsável pela aplicação do survey online e entrega da base final para análises. 
   [Relatório da pesquisa](https://nipp.ufsc.br/category/vitimizacao-e-sentimento-de-seguranca/)
   
 - **Medo do crime e insegurança social em Florianópolis/SC**:
-  Pesquisa sobre a relação entre crime, medo e inseguranças sociais. Essa foi minha pesquisa de tese de Doutorado. Foi a primeira pesquisa do tipo realizada na cidade.
+  Pesquisa sobre a relação entre crime, medo e inseguranças sociais. Essa foi minha pesquisa de tese de Doutorado, e foi a primeira pesquisa do tipo realizada na cidade.
   [Estudo na íntegra](https://repositorio.ufsc.br/handle/123456789/264518)
   
 - **O que conecta os públicos ao jornalismo local: hábitos, interesses, sustentabilidade, engajamento e participação em Florianópolis**:
-  Pesquisa sobre hábitos de consumo de notícias em Florianópolis/SC. Prestei consultoria para desenho de survey representativo da população e análise de dados.
+  Pesquisa sobre hábitos de consumo de notícias em Florianópolis/SC. Prestei consultoria para o desenho de survey representativo da população, levantamento e parte da análise de dados.
   [Resumo do trabalho](https://sistemas.intercom.org.br/pdf/submissao/nacional/17/06282024175731667f23bb0f809.pdf)
 
 :::
