--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,9 @@ about:
     - icon: github
       text: Github
       url: "https://github.com/DenisBerte/"
+      - icon: envelope
+      text: Email
+      url: "mailto:sbdata10@gmail.com"
 page-layout: full
 ---
 
@@ -19,7 +22,7 @@ body {
 
 ## {{< fa user >}} Sobre
 
-Bem vindos! Eu sou o Denis, dono da SBData. Sou Cientista Social, mestre em Sociologia Política, Doutor em Sociologia e Ciência Política com concentração em Sociologia. Atualmente curso MBA em Ciência e Análise de Dados. Tenho experiência em pesquisas quantitativas, especialmente em Opinião Pública e Políticas Públicas, envolvendo trabalho com indicadores sociais diversos e análise estatística multivariada. Também tenho experiência em pesquisas representativas e amostragem, além de levantamento de dados em campo. Trabalho com análise estatística em linguagem R, Python, SPSS e Excel. Presto serviçoes de consultoria em pesquisa e análise, incluindo pesquisa para mandatos políticos, com levantamento de dados primários ou secundários e análises ligadas a eleições. Navegue pelas abas acima para ver algumas publicações recentes, meu currículo Lattes, e detalhes sobre o serviço de Consultoria em pesquisa e análise.
+Bem vindos! Eu sou o Denis, dono da SBData. Sou Cientista Social, mestre em Sociologia Política, Doutor em Sociologia e Ciência Política com concentração em Sociologia. Atualmente curso MBA em Ciência e Análise de Dados. Tenho experiência em pesquisas quantitativas, especialmente em Opinião Pública e Políticas Públicas, envolvendo trabalho com indicadores sociais diversos e análise estatística multivariada. Também tenho experiência em pesquisas representativas e amostragem, além de levantamento de dados em campo. Trabalho com análise estatística em linguagem R, Python, SPSS e Excel. Presto serviços de consultoria em pesquisa e análise, incluindo pesquisa para mandatos políticos, com levantamento de dados primários ou secundários e análises ligadas a eleições. Navegue pelas abas acima para ver algumas publicações recentes, meu currículo Lattes, e detalhes sobre serviços de Consultoria.
 
 ---
 
