--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,7 @@ body {
 
 ## {{< fa user >}} Sobre
 
-Bem vindos! Eu sou o Denis, dono da SBData. Sou Cientista Social, mestre em Sociologia Política, Doutor em Sociologia e Ciência Política com concentração em Sociologia. Atualmente curso MBA em Ciência e Análise de Dados. Tenho experiência em pesquisas quantitativas, especialmente em Opinião Pública e Políticas Públicas, envolvendo trabalho com indicadores sociais diversos e análise estatística multivariada. Também tenho experiência em pesquisas representativas e amostragem, além de levantamento de dados em campo. Trabalho com análise estatística em linguagem R, Python, SPSS e Excel. Presto serviços de consultoria em pesquisa e análise, incluindo pesquisa para mandatos políticos, com levantamento de dados primários ou secundários e análises ligadas a eleições. Navegue pelas abas acima para ver algumas publicações recentes, meu currículo Lattes, e detalhes sobre serviços de Consultoria.
+Bem vindos! Eu sou o Denis, proprietário da SBData. Sou Cientista Social, mestre em Sociologia Política, Doutor em Sociologia e Ciência Política com concentração em Sociologia. Atualmente curso MBA em Ciência e Análise de Dados. Tenho experiência em pesquisas quantitativas, especialmente em Opinião Pública e Políticas Públicas, envolvendo trabalho com indicadores sociais diversos e análise estatística multivariada. Trabalho com análise estatística em linguagem R, Python, SPSS e Excel. Presto serviços de consultoria em pesquisa e análise, incluindo pesquisa para mandatos políticos, com levantamento de dados primários ou secundários e análises ligadas a eleições. Navegue pelas abas acima para ver algumas publicações recentes, meu currículo Lattes, e detalhes sobre serviços de Consultoria.
 
 ---
 
@@ -69,4 +69,16 @@ Minha trajetória acadêmica abrange das Ciências Sociais, em especial a sociol
 ## {{< fa envelope >}} Contato
 
 - **Email**: [sbdata10@gmail.com](mailto:sbdata10@gmail.com)
+- **Telefone/Whatsapp**: (48) 9 9623-7317
 
+---
+
+<div style="font-size: 0.9em; text-align: center; margin-top: 2em;">
+
+**SBData - Soluções em Dados**  
+CNPJ: 60.471.934/0001-33  
+Endereço: Rodovia José Carlos Daux, 4190, Bloco B - Sala 159A  
+Bairro Saco Grande, Florianópolis - SC - Brasil  
+CEP: 88032-005
+
+</div>
