--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,7 @@ body {
 
 ## {{< fa user >}} Sobre
 
-Sou o Denis, Cientista Social, mestre em Sociologia Política, Doutor em Sociologia e Ciência Política com concentração em Sociologia. Atualmente curso MBA em Ciência e Análise de Dados. Tenho experiência em pesquisas quantitativas, especialmente em Opinião Pública e Políticas Públicas, envolvendo trabalho com indicadores sociais diversos e análise estatística multivariada. Trabalho com análise estatística em linguagem R, Python, SPSS e Excel. Presto serviços de consultoria em pesquisa e análise, incluindo pesquisa para mandatos políticos, com levantamento de dados primários ou secundários e análises ligadas a eleições. Navegue pelas abas acima para ver algumas publicações recentes, meu currículo Lattes, e detalhes sobre serviços de Consultoria.
+Sou o Denis, Cientista Social, mestre em Sociologia Política, Doutor em Sociologia e Ciência Política com concentração em Sociologia, e tenho MBA em Ciência e Análise de Dados. Trabalho com pesquisas quantitativas, especialmente em Opinião Pública e Políticas Públicas, envolvendo trabalho com indicadores sociais diversos e análise estatística multivariada. Realizo análise estatística em linguagem R, Python, SPSS e Excel. Presto serviços de consultoria em pesquisa e análise, incluindo pesquisa para mandatos políticos, com levantamento de dados primários ou secundários e análises ligadas a eleições. Navegue pelas abas acima para ver algumas publicações recentes, meu currículo Lattes, e detalhes sobre serviços de Consultoria.
 
 ---
 
@@ -32,7 +32,7 @@ Sou o Denis, Cientista Social, mestre em Sociologia Política, Doutor em Sociolo
 
 Minha trajetória acadêmica abrange das Ciências Sociais, em especial a sociologia e a ciência política, até ciência de dados, com foco em métodos quantitativos de pesquisa e análise de dados.
 
-- **MBA em Data Science and Analytics** \| 2024- \| ESALQ
+- **MBA em Data Science and Analytics** \| 2024-2025 \| USP/ESALQ
 - **Doutor em Sociologia** \| 2018-2024 \| PPGSP/UFSC
 - **Mestre em Sociologia Política** \| 2016-2017 \| PPGSP/UFSC
 - **Bacharel em Ciências Sociais** \| 2010-2015 \| Universidade Federal de Santa Catarina/UFSC
@@ -61,7 +61,7 @@ Minha trajetória acadêmica abrange das Ciências Sociais, em especial a sociol
   
 - **O que conecta os públicos ao jornalismo local: hábitos, interesses, sustentabilidade, engajamento e participação em Florianópolis**:
   Pesquisa sobre hábitos de consumo de notícias em Florianópolis/SC. Prestei consultoria para o desenho de survey representativo da população, levantamento e parte da análise de dados.
-  [Resumo do trabalho](https://sistemas.intercom.org.br/pdf/submissao/nacional/17/06282024175731667f23bb0f809.pdf)
+  [Resumo do trabalho](https://publicacoes.softaliza.com.br/compos2025/article/view/11352)
 
 :::
 
@@ -70,16 +70,16 @@ Minha trajetória acadêmica abrange das Ciências Sociais, em especial a sociol
 ## {{< fa envelope >}} Contato
 
 - **Email**: [denis@sabdata.com.br](mailto:denis@sabdata.com.br)
-- **Telefone/Whatsapp**: (48) 9 9623-7317
+- **Telefone/Whatsapp**: (48) 9 9684-7867
 
 ---
 
 <div style="font-size: 0.9em; text-align: center; margin-top: 2em;">
 
 **SaBdata - Pesquisa e Análise**  
-CNPJ: 60.471.934/0001-33  
 Endereço: Rodovia José Carlos Daux, 4190, Bloco B - Sala 159A  
 Bairro Saco Grande, Florianópolis - SC - Brasil  
 CEP: 88032-005
+CNPJ: 60.471.934/0001-33 
 
 </div>
